style: fix blog posts on mobile

--- a/js/highlightjs/styles/ssms.css
+++ b/js/highlightjs/styles/ssms.css
@@ -49,3 +49,7 @@
 .language-tsql .hljs-literal {
     color: #808080;
 }
+
+body {
+  overflow-wrap: break-word;
+}
